--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
     <title>Portfolio - Thiago Lima</title>
 </head>
 
 <body>
+
+    <div class="main">
+        <header class="header">
+        <img class="photo" src="./assets/images/my-photo.jfif" alt="my photo">
+        <h1>Olá,<br> eu sou o Thiago Lima</h1>
+        <div class="informacoes">
+            <p>Professor de Programação</p>
+            <p>São Bernardo do Campo - Brazil</p>
+            <p>(11) 99999-9999</p>
+            <p>exemplo@mail.com</p>
+        </div>
+        </header>
+    </div>
 
 </body>
 
