feat: Add icons to the information section
Implements visual icons for each item in the information div. This improves readability and makes the data easier for users to identify.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <header class="header">
         <img class="photo" src="./assets/images/my-photo.jfif" alt="my photo">
         <h1>Olá,<br> eu sou o Thiago Lima</h1>
-        <div class="informacoes">
-            <p>Professor de Programação</p>
-            <p>São Bernardo do Campo - Brazil</p>
-            <p>(11) 99999-9999</p>
-            <p>exemplo@mail.com</p>
+        <div class="information">
+            <p class="job">Professor de Programação</p>
+            <p class="location">São Bernardo do Campo - Brazil</p>
+            <p class="phone">(11) 99999-9999</p>
+            <p class="email">exemplo@mail.com</p>
         </div>
         </header>
     </div>
