feat(responsive): Adds tablet and desktop responsiveness to portfolio.
-Adds three-dot icon to simulate a sidebar menu on smaller screens.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main">
         <header class="header">
         <img class="photo" src="./assets/images/my-photo.jfif" alt="my photo">
-        <h1>Olá,<br> eu sou o Thiago Lima</h1>
+        <h1 class="title">Olá,<br> eu sou o Thiago Lima</h1>
         <div class="information">
             <p class="job">Professor de Programação</p>
             <p class="location">São Bernardo do Campo - Brazil</p>
