--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/acordeon.css">
     <title>Portfolio - Thiago Lima</title>
 </head>
 
@@ -20,10 +21,23 @@
         <div class="information">
             <p class="job">Professor de Programação</p>
             <p class="location">São Bernardo do Campo - Brazil</p>
-            <p class="phone">(11) 99999-9999</p>
+            <p class="phone"> (11) 99999-9999</p>
             <p class="email">exemplo@mail.com</p>
         </div>
         </header>
+
+        <section class="acordeon">
+            <button class="trigger">Idiomas</button>
+            <div class="content">
+                <ul>
+                    <li>Português</li>
+                    <li>Inglês</li>
+                    <li>Alemão</li>
+                    <li>Espanhol</li>
+                </ul>
+            </div>
+        </section>
     </div>
+
 </body>
 </html>
