feat(accordion): Implement accordion.js and update accordion.css to add interactive functionality.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,30 @@
                 </ul>
             </div>
         </section>
+        <section class="acordeon">
+            <button class="trigger">Idiomas</button>
+            <div class="content">
+                <ul>
+                    <li>Português</li>
+                    <li>Inglês</li>
+                    <li>Alemão</li>
+                    <li>Espanhol</li>
+                </ul>
+            </div>
+        </section>
+        <section class="acordeon">
+            <button class="trigger">Idiomas</button>
+            <div class="content">
+                <ul>
+                    <li>Português</li>
+                    <li>Inglês</li>
+                    <li>Alemão</li>
+                    <li>Espanhol</li>
+                </ul>
+            </div>
+        </section>
     </div>
 
+    <script src="./assets/js/acordeon.js"></script>
 </body>
 </html>
