--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/acordeon.css">
+    <link rel="stylesheet" href="./assets/css/languages.css">
     <title>Portfolio - Thiago Lima</title>
 </head>
 
@@ -29,33 +30,11 @@
         <section class="acordeon">
             <button class="trigger">Idiomas</button>
             <div class="content">
-                <ul>
-                    <li>Português</li>
-                    <li>Inglês</li>
-                    <li>Alemão</li>
-                    <li>Espanhol</li>
-                </ul>
-            </div>
-        </section>
-        <section class="acordeon">
-            <button class="trigger">Idiomas</button>
-            <div class="content">
-                <ul>
-                    <li>Português</li>
-                    <li>Inglês</li>
-                    <li>Alemão</li>
-                    <li>Espanhol</li>
-                </ul>
-            </div>
-        </section>
-        <section class="acordeon">
-            <button class="trigger">Idiomas</button>
-            <div class="content">
-                <ul>
-                    <li>Português</li>
-                    <li>Inglês</li>
-                    <li>Alemão</li>
-                    <li>Espanhol</li>
+                <ul class="languages">
+                    <li class="portugues">Português</li>
+                    <li class="ingles">Inglês</li>
+                    <li class="alemao">Alemão</li>
+                    <li class="espanhol">Espanhol</li>
                 </ul>
             </div>
         </section>
