--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <main class="main">
         <header class="header">
         <img class="photo" src="./assets/images/my-photo.jfif" alt="my photo">
         <h1 class="title">Olá,<br> eu sou o Thiago Lima</h1>
@@ -38,7 +38,7 @@
                 </ul>
             </div>
         </section>
-    </div>
+    </main>
 
     <script src="./assets/js/acordeon.js"></script>
 </body>
