feat(portfolio): Implement and style the portfolio section
This change applies specific CSS styles to the projects selection list by creating a new  file. The goal is to improve the component's visual consistency and make its styling easier to manage.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/acordeon.css">
     <link rel="stylesheet" href="./assets/css/languages.css">
+    <link rel="stylesheet" href="./assets/css/portfolio.css">
     <title>Portfolio - Thiago Lima</title>
 </head>
 
@@ -35,6 +36,27 @@
                     <li class="ingles">Inglês</li>
                     <li class="alemao">Alemão</li>
                     <li class="espanhol">Espanhol</li>
+                </ul>
+            </div>
+        </section>
+        <section class="acordeon">
+            <button class="trigger">Portfólio</button>
+            <div class="content">
+                <ul class="portfolio">
+                    <li>
+                        <span class="title">Portfolio</span>
+                        <a target="_blank" 
+                        href="https://github.com/thiagofalima/portfolio">
+                        https://github.com/thiagofalima/portfolio
+                        </a>
+                    </li>
+                    <li>
+                        <span class="title">Clonando Página Youtube</span>
+                        <a target="_blank" 
+                        href="https://github.com/thiagofalima/clonando-pagina-youtube">
+                        https://github.com/thiagofalima/clonando-pagina-youtube
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
