feat(contacts): Add link for phone and e-mail.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
         <div class="information">
             <p class="job">Professor de Programação</p>
             <p class="location">São Bernardo do Campo - Brazil</p>
-            <p class="phone"> (11) 99999-9999</p>
-            <p class="email">exemplo@mail.com</p>
+            <p class="phone">
+                <a href="tel:(11)99999-9999"> (11) 99999-9999</a>
+            </p>
+            <p class="email">
+                <a href="mail:exemplo@mail.com">exemplo@mail.com</a>
+            </p>
         </div>
         </header>
 
