--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/acordeon.css">
     <link rel="stylesheet" href="./assets/css/languages.css">
     <link rel="stylesheet" href="./assets/css/portfolio.css">
+    <link rel="stylesheet" href="./assets/css/experience.css">
     <title>Portfolio - Thiago Lima</title>
 </head>
 
 <body>
     <main class="main">
         <header class="header">
-        <img class="photo" src="./assets/images/my-photo.jfif" alt="my photo">
-        <h1 class="title">Olá,<br> eu sou o Thiago Lima</h1>
-        <div class="information">
-            <p class="job">Professor de Programação</p>
-            <p class="location">São Bernardo do Campo - Brazil</p>
-            <p class="phone">
-                <a href="tel:(11)99999-9999"> (11) 99999-9999</a>
-            </p>
-            <p class="email">
-                <a href="mail:exemplo@mail.com">exemplo@mail.com</a>
-            </p>
-        </div>
+            <img class="photo" src="./assets/images/my-photo.jfif" alt="my photo">
+            <h1 class="title">Olá,<br> eu sou o Thiago Lima</h1>
+            <div class="information">
+                <p class="job">Professor de Programação</p>
+                <p class="location">São Bernardo do Campo - Brazil</p>
+                <p class="phone">
+                    <a href="tel:(11)99999-9999"> (11) 99999-9999</a>
+                </p>
+                <p class="email">
+                    <a href="mail:exemplo@mail.com">exemplo@mail.com</a>
+                </p>
+            </div>
         </header>
 
         <section class="acordeon">
@@ -49,17 +50,36 @@
                 <ul class="portfolio">
                     <li>
                         <span class="title">Portfolio</span>
-                        <a target="_blank" 
-                        href="https://github.com/thiagofalima/portfolio">
-                        https://github.com/thiagofalima/portfolio
+                        <a target="_blank" href="https://github.com/thiagofalima/portfolio">
+                            https://github.com/thiagofalima/portfolio
                         </a>
                     </li>
                     <li>
                         <span class="title">Clonando Página Youtube</span>
-                        <a target="_blank" 
-                        href="https://github.com/thiagofalima/clonando-pagina-youtube">
-                        https://github.com/thiagofalima/clonando-pagina-youtube
+                        <a target="_blank" href="https://github.com/thiagofalima/clonando-pagina-youtube">
+                            https://github.com/thiagofalima/clonando-pagina-youtube
                         </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="acordeon">
+            <button class="trigger">Experiência</button>
+            <div class="content">
+                <ul class="experience">
+                    <li>
+                        <span class="title">Instrutor de Ensino / SENAI-SP</span>
+                        <p class="date">2024 - Current</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat tempore facere assumenda
+                            ullam, amet soluta asperiores delectus maiores dolorem ea totam. Sunt quo consequuntur
+                            reprehenderit omnis odio facilis vel architecto.</p>
+                    </li>
+                    <li>
+                        <span class="title">Engenheiro de Manufatura / GM</span>
+                        <p class="date">2021 - 2024</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat tempore facere assumenda
+                            ullam, amet soluta asperiores delectus maiores dolorem ea totam. Sunt quo consequuntur
+                            reprehenderit omnis odio facilis vel architecto.</p>
                     </li>
                 </ul>
             </div>
@@ -68,4 +88,5 @@
 
     <script src="./assets/js/acordeon.js"></script>
 </body>
+
 </html>
