feat(skills): Implement and style the skills section
This change applies specific CSS styles to the skills list by creating a new  file. The goal is to improve the component's visual consistency and make its styling easier to manage.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/css/languages.css">
     <link rel="stylesheet" href="./assets/css/portfolio.css">
     <link rel="stylesheet" href="./assets/css/experience.css">
+    <link rel="stylesheet" href="./assets/css/skills.css">
     <title>Portfolio - Thiago Lima</title>
 </head>
 
@@ -32,6 +33,32 @@
                 </p>
             </div>
         </header>
+
+        <section class="acordeon">
+            <button class="trigger">Skills</button>
+            <div class="content">
+                <div class="skills">
+                    <div class="hard-skills">
+                        <h3>Hard Skills</h3>
+                        <ul class="hard">
+                            <li class="python"><img src="./assets/images/icons/python-icon.svg" alt="python icon"></li>
+                            <li class="html"><img src="./assets/images/icons/html-icon.svg" alt="html icon"></li>
+                            <li class="css"><img src="./assets/images/icons/css-icon.svg" alt="css icon"></li>
+                            <li class="js"><img src="./assets/images/icons/js-icon.svg" alt="javaScript icon"></li>
+                        </ul>
+                    </div>
+                    <div class="soft-skills">
+                        <h3>Soft Skills</h3>
+                        <ul class="soft">
+                            <li>Facilidade de Comunicação</li>
+                            <li>Organização</li>
+                            <li>Trabalho em Equipe</li>
+                            <li>Flexibilidade</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="acordeon">
             <button class="trigger">Idiomas</button>
