--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
     <link rel="stylesheet" href="./assets/css/portfolio.css">
     <link rel="stylesheet" href="./assets/css/experience.css">
     <link rel="stylesheet" href="./assets/css/skills.css">
-    <title>Portfolio - Thiago Lima</title>
+    <link rel="stylesheet" href="./js/acordeon.js">
+
+    <title>Portfolio - Henrique Inacio</title>
 </head>
 
 <body>
     <main class="main">
         <header class="header">
-            <img class="photo" src="./assets/images/my-photo.jfif" alt="my photo">
-            <h1 class="title">Olá,<br> eu sou o Thiago Lima</h1>
+            <img class="photo" src="./assets/images/IMAGENS.jpg" alt="my photo">
+            <h1 class="title">Olá,<br> eu sou o Henrique Inacio</h1>
             <div class="information">
                 <p class="job">Professor de Programação</p>
                 <p class="location">São Bernardo do Campo - Brazil</p>
                 <p class="phone">
-                    <a href="tel:(11)99999-9999"> (11) 99999-9999</a>
+                    <a href="tel:(11) 92017-7498"> (11) 92017-7498</a>
                 </p>
                 <p class="email">
                     <a href="mail:exemplo@mail.com">exemplo@mail.com</a>
@@ -41,7 +43,6 @@
                     <div class="hard-skills">
                         <h3>Hard Skills</h3>
                         <ul class="hard">
-                            <li class="python"><img src="./assets/images/icons/python-icon.svg" alt="python icon"></li>
                             <li class="html"><img src="./assets/images/icons/html-icon.svg" alt="html icon"></li>
                             <li class="css"><img src="./assets/images/icons/css-icon.svg" alt="css icon"></li>
                             <li class="js"><img src="./assets/images/icons/js-icon.svg" alt="javaScript icon"></li>
@@ -53,7 +54,7 @@
                             <li>Facilidade de Comunicação</li>
                             <li>Organização</li>
                             <li>Trabalho em Equipe</li>
-                            <li>Flexibilidade</li>
+                            <li src="#">Flexibilidade</li>
                         </ul>
                     </div>
                 </div>
@@ -64,10 +65,9 @@
             <button class="trigger">Idiomas</button>
             <div class="content">
                 <ul class="languages">
-                    <li class="portugues">Português</li>
-                    <li class="ingles">Inglês</li>
-                    <li class="alemao">Alemão</li>
-                    <li class="espanhol">Espanhol</li>
+                    <li class="portugues">Português ✅</li>
+                    <br>
+                    <li class="ingles">Inglês basico ✅</li>
                 </ul>
             </div>
         </section>
@@ -77,10 +77,11 @@
                 <ul class="portfolio">
                     <li>
                         <span class="title">Portfolio</span>
-                        <a target="_blank" href="https://github.com/thiagofalima/portfolio">
-                            https://github.com/thiagofalima/portfolio
+                        <a target="_blank" href="https://github.com/new">
+                            https://github.com/new
                         </a>
                     </li>
+                    <br>
                     <li>
                         <span class="title">Clonando Página Youtube</span>
                         <a target="_blank" href="https://github.com/thiagofalima/clonando-pagina-youtube">
@@ -95,15 +96,16 @@
             <div class="content">
                 <ul class="experience">
                     <li>
-                        <span class="title">Instrutor de Ensino / SENAI-SP</span>
-                        <p class="date">2024 - Current</p>
+                        <span class="title">Aluno do Ensino / SENAI-SP</span>
+                        <p class="date">2025 - Current</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat tempore facere assumenda
                             ullam, amet soluta asperiores delectus maiores dolorem ea totam. Sunt quo consequuntur
                             reprehenderit omnis odio facilis vel architecto.</p>
                     </li>
+                    <hr>
                     <li>
-                        <span class="title">Engenheiro de Manufatura / GM</span>
-                        <p class="date">2021 - 2024</p>
+                        <span class="title">Aluno do SESI / SP</span>
+                        <p class="date">2025</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat tempore facere assumenda
                             ullam, amet soluta asperiores delectus maiores dolorem ea totam. Sunt quo consequuntur
                             reprehenderit omnis odio facilis vel architecto.</p>
@@ -113,7 +115,7 @@
         </section>
     </main>
 
-    <script src="./assets/js/acordeon.js"></script>
+    <script src="./js/acordeon.js"></script>
 </body>
 
 </html>
